# sora-serifu-infer

./: .dockerignore  Dockerfile  README.md  analyzer.py  main.py  pyproject.toml
static/: index.html
