[tool.poetry]
name = "sora-serifu-predict"
version = "0.1.0"
description = "ねぇチノちゃん、あなたのセリフ?"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3+"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.7.1"
transformers = "4.4.2"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
